# WoTAgent

./: .gitignore  CLAUDE.md
wot-device-simulator/: README.md  pyproject.toml
wot-device-simulator/data/: state.db  state.db-shm  state.db-wal  state.json
wot-device-simulator/data/td/: ac_bedroom1.json  ac_bedroom2.json  exhaust_bathroom1.json  exhaust_bathroom2.json  exhaust_kitchen.json  fan_study.json  gas_sensor_kitchen.json  humidity_bedroom.json  light_bathroom1.json  light_bathroom2.json  light_bedroom1.json  light_bedroom2.json  light_kitchen.json  light_parlor.json  light_study.json  purifier_living.json  temp_parlor.json  tv_living.json
wot-device-simulator/src/wot_device_simulator/: __init__.py  dashboard.html  mcp_server.py  rules.py  service.py  simulator.py  state_cli.py  td.py
wot-device-simulator/tests/: test_rules.py  test_simulator.py  test_td.py
wotagent-prototype/: .env.example  README.md  pyproject.toml  repl.py
wotagent-prototype/data/chroma/: chroma.sqlite3
wotagent-prototype/data/memory/: default.chat.jsonl  default.full.jsonl  default.json  sess_075754c2e014.chat.jsonl  sess_075754c2e014.full.jsonl  sess_075754c2e014.json  sess_0788250ef1d9.chat.jsonl  sess_0788250ef1d9.full.jsonl  sess_0788250ef1d9.json  sess_07fb7fcc856b.chat.jsonl  sess_07fb7fcc856b.full.jsonl  sess_07fb7fcc856b.json  sess_15ec77416b16.chat.jsonl  sess_15ec77416b16.full.jsonl  sess_15ec77416b16.json  sess_3b76847c64c2.chat.jsonl  sess_3b76847c64c2.full.jsonl  sess_3b76847c64c2.json  sess_6b528c53cc03.chat.jsonl  (+12 more)
wotagent-prototype/doc/: ARCHITECTURE.md  EVENTS.md  PERCEPTION.md  PIPELINE.md
wotagent-prototype/scripts/: download_embed_model.py
wotagent-prototype/tests/: conftest.py  test_core.py  test_perception.py
(+50 files in other folders)
