[project]
name = "wot-device-simulator"
version = "0.1.0"
description = "Standalone WoT device simulator service with TD registry and MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "fastmcp>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wot-sim-api = "wot_device_simulator.service:main"
wot-sim-mcp = "wot_device_simulator.mcp_server:main"
wot-sim-state = "wot_device_simulator.state_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
